--- a/package.json
+++ b/package.json
@@ -9,17 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/three": "^0.180.0",
+    "framer-motion": "^11.11.17",
     "next": "14.2.18",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "framer-motion": "^11.11.17"
+    "three": "^0.180.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "typescript": "^5",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
